[EATON-103] Product Grid Family - WIP + Cleanup

--- a/eaton.frontend/src/components/product-grid/css/product-grid.scss
+++ b/eaton.frontend/src/components/product-grid/css/product-grid.scss
@@ -6,5 +6,6 @@
 @import "../../../global/css/_config/sass";
 
 
-// Import SubModules
-@import "product-card-sku";
+// Import Sub Views
+@import "views/product-card-sku";
+@import "views/product-card-family";
