--- a/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins.scss
@@ -36,6 +36,13 @@
 
 // Layout Mixins
 //--------------
+@mixin absolute-fill() {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
 
 // Clearfix (from Bootstrap v3.3.7)
 //
