--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
@@ -1,5 +1,5 @@
 <!--/*
-  Component M-36 - Product Card: SKU
+  M-36 - Product Card: SKU Item
 */-->
 <template data-sly-template.item="${ @ data }">
 
