add feature block left view

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -15,6 +15,20 @@
         height: 750px;
       }
     }
+
+    &--left {
+
+      .feature-block-component {
+
+        &__container {
+          display: flex;
+        }
+
+        &--copy {
+          order: 2;
+        }
+      }
+    }
   }
 
   &__copy {
