--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -41,6 +41,10 @@
 
 @media screen and (max-width: 767px) { .feature-block-component__container--white { height: 750px; } }
 
+.feature-block-component__container--left .feature-block-component__container { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.feature-block-component__container--left .feature-block-component--copy { -webkit-box-ordinal-group: 3; -ms-flex-order: 2; order: 2; }
+
 .feature-block-component__copy { height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 
 .feature-block-component__copy--white-text { color: #FFF; }
