[EATON-352] Related Products for Product Detail Card Component WIP

--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -2,7 +2,7 @@
 // Import All SASS config files (Variables, Mixins, functions... etc)
 @import "../../../global/css/_config/sass";
 
-.slick-carousel {
+.module-related-products {
   position: relative;
 
   &__dots {
