refactor product features

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -6,6 +6,11 @@
 
     &--blue {
       height: 600px;
+      display: flex;
+    }
+
+    &--right {
+
     }
 
     &--white {
@@ -16,19 +21,6 @@
       }
     }
 
-    &--left {
-
-      .feature-block-component {
-
-        &__container {
-          display: flex;
-        }
-
-        &--copy {
-          order: 2;
-        }
-      }
-    }
   }
 
   &__copy {
@@ -39,6 +31,13 @@
 
     &--white-text {
       color: $color__white;
+    }
+
+    &--left {
+
+      @include media-tablet-and-up {
+        order: 2;
+      }
     }
   }
 
