change feature block data

--- a/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
+++ b/eaton.frontend/src/components/title-text-image-link/css/views/_view-feature-block.scss
@@ -4,13 +4,13 @@
 
   &__container {
 
-    &--blue {
-      height: 600px;
+    &--height {
+      height: 665px;
       display: flex;
-    }
 
-    &--right {
-
+      @include media-mobile-only {
+        height: 750px;
+      }
     }
 
     &--white {
