refactor classes of carousel

--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -51,7 +51,7 @@
   }
 
   @include media-desktop-large {
-    &:hover .slick-carousel__arrows {
+    &:hover .module-related-products__arrows {
       display: block !important;
     }
   }
