--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
@@ -16,4 +16,4 @@
 
 .module-related-products .slick-active button { background-color: #005EB8; }
 
-@media screen and (min-width: 1200px) { .module-related-products:hover .slick-carousel__arrows { display: block !important; } }
+@media screen and (min-width: 1200px) { .module-related-products:hover .module-related-products__arrows { display: block !important; } }
