--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
@@ -1,6 +1,6 @@
 <template data-sly-template.module="${ @ data }">
-    <div class="module-related-products slick-carousel">
-        <div class="slick-carousel__slides" data-sly-list="${data}">
+    <div class="module-related-products">
+        <div class="module-related-products__slides" data-sly-list="${data}">
             <a href="${item.link}" target="${item.target}" class="slides col-xs-12 ${data.length < 4 ? 'col-sm-4' : 'col-sm-3'}">
                 <div class="col-xs-12 related-products-component__card">
                     <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}"/>
@@ -14,8 +14,8 @@
         </div>
 
         <sly data-sly-test="${data.length > 4}">
-            <button class="slick-carousel__prev-arrow slick-carousel__arrows button--reset"><span class="icon icon-chevron-left"></span></button>
-            <button class="slick-carousel__next-arrow slick-carousel__arrows button--reset"><span class="icon icon-chevron-right"></span></button>
+            <button class="module-related-products__prev-arrow module-related-products__arrows button--reset"><span class="icon icon-chevron-left"></span></button>
+            <button class="module-related-products__next-arrow module-related-products__arrows button--reset"><span class="icon icon-chevron-right"></span></button>
         </sly>
 
     </div>
