change data for feature block

--- a/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
+++ b/eaton.frontend/src/shared/module-related-products/css/module-related-products.scss
@@ -5,6 +5,14 @@
 .module-related-products {
   position: relative;
 
+  &__slides {
+    padding: 0;
+
+    .slides {
+      position: relative;
+    }
+  }
+
   &__dots {
     text-align: center;
 
