--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-media-gallery.html
@@ -1,5 +1,80 @@
 <template data-sly-template.module="${ @ data }">
   <div class="module-media-gallery">
-    <!--/* TODO: Add Markup */-->
+    <!--*/ Gallery - Title & Description */-->
+    <div class="module-media-gallery__text">
+      <p class="b-heading-h3">${data.title}</p>
+      <p class="b-body-copy">${data.description}</p>
+    </div>
+
+    <div class="module-media-gallery__slide-container" data-sly-list="${data.items}">
+      <!--*/ Slide Item - Preview */-->
+      <div class="module-media-gallery__slide-item" data-slide-item="${isVideo == true ? 'image' : 'video'}">
+
+          <!--*/ Slide Item - Image */-->
+          <div class="module-media-gallery__slide-image">
+            <img data-src="${item.images.preview}"
+                data-desktop-rendition="${item.images.previewDesktop}"
+                data-mobile-rendition="${item.images.mobileDesktop}"
+                alt="${item.imageAlt}" />
+          </div>
+
+          <!--*/ Slide Item - Title & Description */-->
+          <div class="module-media-gallery__slide-info">
+              <p class="b-heading-h5">${item.title}</p>
+              <p class="b-body-copy">${item.text}</p>
+          </div>
+
+          <!--*/ Slide Item - Utility - Zoom & Download */-->
+          <div class="module-media-gallery__slide-utility">
+            <button class="button--reset">
+              <span class="sr-only">Download</span>
+              <i class="icon icon-download" aria-hidden="true"></i>
+            </button>
+            <button class="button--reset">
+              <span class="sr-only">Zoom</span>
+              <i class="icon icon-search" aria-hidden="true"></i>
+            </button>
+          </div>
+
+      </div>
+
+      <!--*/ Slide Carousel Arrows - Preview */-->
+      <sly data-sly-test="${data.items.length > 1}">
+          <button class="module-media-gallery__prev-slide module-media-gallery__slide-arrows button--reset">
+            <span class="sr-only">Prev</span>
+            <i class="icon icon-chevron-left"></i>
+          </button>
+
+          <button class="module-media-gallery__next-slide module-media-gallery__slide-arrows button--reset">
+            <span class="sr-only">Next</span>
+            <i class="icon icon-chevron-right"></i>
+          </button>
+      </sly>
+    </div>
+
+    <div class="module-media-gallery__thumbnail-container" data-sly-list="${data.items}">
+      <!--*/ Thumbnail Item - Preview */-->
+      <div class="module-media-gallery__thumbnail-item" data-thumbnail-item="${isVideo == true ? 'image' : 'video'}">
+
+          <!--*/ Thumbnail Item - Image */-->
+          <div class="module-media-gallery__thumbnail-image">
+            <img data-src="${item.images.thumbnail}" alt="${item.imageAlt}" />
+          </div>
+      </div>
+
+      <!--*/ Thumbnail Carousel Arrows - Preview */-->
+      <sly data-sly-test="${data.items.length > 1}">
+          <button class="module-media-gallery__prev-thumbnail module-media-gallery__thumbnail-arrows button--reset">
+            <span class="sr-only">Prev</span>
+            <i class="icon icon-chevron-left"></i>
+          </button>
+
+          <button class="module-media-gallery__next-thumbnail module-media-gallery__thumbnail-arrows button--reset">
+            <span class="sr-only">Next</span>
+            <i class="icon icon-chevron-right"></i>
+          </button>
+      </sly>
+    </div>
+
   </div>
 </template>
