It Makes Autocorrected Search an independent module since it should be used only in Some particular page-templates

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-results/views/view-default.html
@@ -6,6 +6,13 @@
   </sly>
 
 
+  <!--/* M-64 - Autocorrected Search */-->
+  <sly data-sly-test="${ data.search.autoCorrect.enabled }">
+    <sly data-sly-use.tpl="../../shared/templates/module-autocorrected-search.html">
+      <sly data-sly-call="${ tpl.module @ data=data.search.autoCorrect }"></sly>
+    </sly>
+  </sly>
+
 
   <div class="search-results-default">
     <div class="container">
