--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -124,11 +124,12 @@
           content: '';
           position: absolute;
           height: 4px;
-          bottom: -4px;
+          bottom: 0;
           left: 5px;
           right: 5px;
           width: 90%;
           background: $color__primary-blue;
+          z-index: 1;
         }
       }
 
