--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -26,14 +26,18 @@
   .header-utility-nav__toggle-selector { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
   .header-utility-nav .icon { margin-right: 5px; } }
 
-.header-primary-nav { position: relative; z-index: 112; background: #FFF; border-bottom: 4px solid #EEF0F2; -webkit-transition: height 0.3s ease-in-out; transition: height 0.3s ease-in-out; }
+.header-primary-nav { position: relative; z-index: 112; background: #FFF; -webkit-transition: height 0.3s ease-in-out; transition: height 0.3s ease-in-out; }
+
+.header-primary-nav::after { content: ''; position: absolute; bottom: 0; width: 100%; height: 4px; background: #EEF0F2; }
 
 .header-primary-nav .row { display: -webkit-box; display: -ms-flexbox; display: flex; }
+
+.header-primary-nav__links { position: relative; z-index: 1; }
 
 .header-primary-nav__links i { font-size: 20px; color: #005EB8; position: relative; }
 
 @media screen and (max-width: 991px) { .header-primary-nav .row { -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-  .header-primary-nav__links { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+  .header-primary-nav__links { -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
   .header-primary-nav__open-search, .header-primary-nav__toggle-mobile-menu { display: inline-block; padding: 17px; }
   .header-primary-nav .icon-close { display: none; color: #FFF; } }
 
