fix missing image for carousel

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-related-products.html
@@ -8,7 +8,7 @@
                 </span>
                 </a>
                 <div class="col-xs-12 related-products-component__card">
-                    <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" alt="${item.image_alt}"/>
+                    <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
                 </div>
                 <div class="col-xs-12">
                     <p class="b-eyebrow-small related-products-component__title">${item.title}</p>
