--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -100,9 +100,7 @@ i { font-style: normal; }
 
 p { line-height: 1.3; }
 
-a { color: #005EB8; }
-
-a:link, a:visited, a:active { color: #005EB8; text-decoration: none; }
+a:link, a:visited, a:active { text-decoration: none; }
 
 a:hover { text-decoration: underline; }
 
