--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-related-products/css/module-related-products.css
@@ -4,6 +4,8 @@
 
 .module-related-products__slides .slides { position: relative; }
 
+.module-related-products__slides a { z-index: 10; }
+
 .module-related-products__dots { text-align: center; }
 
 .module-related-products__dots li { display: inline; padding-right: 10px; }
