EATON-364 - fixing font issues with topic link list

--- a/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
+++ b/eaton.frontend/src/global/css/_config/mixins/_mixins-typography.scss
@@ -246,6 +246,23 @@
   }
 }
 
+// links bold
+@mixin h5-link-bold {
+  @include h5;
+  font-family: $font-family__primary-bold;
+  @include media-desktop-and-up {
+    font-family: $font-family__primary-bold;
+  }
+}
+
+@mixin h4-link-bold {
+  @include h4;
+  font-family: $font-family__primary-bold;
+  @include media-desktop-and-up {
+    font-family: $font-family__primary-bold;
+  }
+}
+
 
 // Eyebrow Small
 //--------------
