--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -162,6 +162,18 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 @media screen and (min-width: 992px) { .b-eyebrow-small { font-family: Arial, "Arial", sans-serif; font-size: 18px; line-height: 24px; text-transform: uppercase; } }
 
+.b-h5-link-bold { font-family: Arial, sans-serif; font-size: 20px; font-weight: bold; line-height: 30px; font-family: "EatonBold", Arial, sans-serif; }
+
+@media screen and (min-width: 992px) { .b-h5-link-bold { font-family: Arial, sans-serif; font-size: 26px; font-weight: bold; line-height: 40px; } }
+
+@media screen and (min-width: 992px) { .b-h5-link-bold { font-family: "EatonBold", Arial, sans-serif; } }
+
+.b-h4-link-bold { font-family: Arial, sans-serif; font-size: 22px; font-weight: bold; line-height: 29px; font-family: "EatonBold", Arial, sans-serif; }
+
+@media screen and (min-width: 992px) { .b-h4-link-bold { font-family: Arial, sans-serif; font-size: 30px; font-weight: bold; line-height: 42px; } }
+
+@media screen and (min-width: 992px) { .b-h4-link-bold { font-family: "EatonBold", Arial, sans-serif; } }
+
 .u-flex { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
 .u-flex-1 { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; }
