--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-card/css/module-product-card.css
@@ -1,1 +1,7 @@
-.module-product-detail-card { border-top: 4px solid #005EB8; }
+.module-product-detail-card__title { margin: 35px 0; position: relative; }
+
+.module-product-detail-card__title::before { content: ""; position: absolute; background: #005EB8; height: 4px; width: 60px; bottom: -15px; }
+
+.module-product-detail-card__price { margin: 30px 0; }
+
+.module-product-detail-card__price span { color: #5B6770; padding-left: 5px; }
