--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-resource-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-resource-list.html
@@ -44,7 +44,8 @@
                                         <li class="eaton-download-list__item secondary-content-accordion__download-icon">
                                             <i class="icon icon-download" aria-hidden="true"></i>
                                             <div class="eaton-download-list__document">
-                                                <a href="${document.url}" aria-label="Download ${document.type} for ${ document.title }" target="${document.target}" class="b-h5-link">${document.title}<span data-sly-test="${document.isNew}" class="secondary-content-accordion__badge">NEW</span></a>
+                                                <a href="${document.url}" aria-label="Download ${document.type} for ${ document.title }" target="${document.target}" class="b-h5-link">${document.title}</a>
+                                                <span data-sly-test="${document.isNew}" class="secondary-content-accordion__badge">NEW</span>
                                                 <span class="b-body-copy-small eaton-download-list__size">(${document.type} ${document.size}, ${document.date})</span>
                                             </div>
                                         </li>
