--- a/eaton.frontend/src/components/search-results/css/search-results.scss
+++ b/eaton.frontend/src/components/search-results/css/search-results.scss
@@ -5,6 +5,8 @@
 // Import All SASS config files (Variables, Mixins, Functions, etc)
 @import "../../../global/css/_config/sass";
 
-// Import SubModules
-@import "results-list";
-@import "results-list-modules";
+
+.search-results {
+  position: relative;
+  z-index: 1;
+}
